--- a/static/css/main.css
+++ b/static/css/main.css
@@ -106,6 +106,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .glowing-orb.thinking {
     transform-origin: 50% 50%;
+    background-size: 100% 100%;
     animation: grow-shrink 0.7s infinite alternate;
 }
 
